--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- 
+      As of IOS 11.3. Safari doesn't use the manifest.json to find the Icon. You have to include it here instead.
+    -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
     <title>Handball</title>
   </head>
   <body>
